# monitoring-telegram-bot

./: .gitmodules  LICENSE  README.md  config.yaml  default.nix  dependencies.nix  monitoring-telegram-bot.cabal  release.nix  shell.nix  stack.yaml
app/: Main.hs
deployment/: deploy.nix  deploy.sh
nixdeps/: servant-client.nix  servant.nix
src/TgBot/: ParseUserMessage.hs  StatsClient.hs
src/TgBot/Server/: Bot.hs  Config.hs
