name:                monitoring-telegram-bot
version:             0.1.0.0
--synopsis:
--description:
homepage:            https://github.com/hexresearch/monitoring-telegram-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Daria Zimarina
maintainer:          dzimarina@gmail.com
copyright:           2017 Hexresearch Team
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TgBot.Server.Bot
                     , TgBot.Server.Config
                     , TgBot.ParseUserMessage
                     , TgBot.StatsClient
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , alarmclock
                     , async
                     , http-client
                     , http-client-tls
                     , interpolatedstring-perl6
                     , megaparsec
                     , servant
                     , servant-client
                     , telegram-api
                     , text
                     , time
                     , yaml
  default-extensions:
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    TemplateHaskell

executable monitoring-telegram-bot
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , monitoring-telegram-bot
                     , optparse-applicative
  default-extensions:
    OverloadedStrings
    RecordWildCards
